--- a/trunk/sim/configure.in.in
+++ b/trunk/sim/configure.in.in
@@ -96,11 +96,11 @@ KDE_CHECK_HEADER(qsyntaxhighlighter.h,[AC_DEFINE(HAVE_QSYNTAXHIGHLIGHTER_H,1,[Ha
 AC_DEFINE_UNQUOTED(PREFIX, "$prefix", [Install prefix])
 AC_DEFINE(USE_QT,1,[Use QT - need for libicq])
 AC_SUBST(EXTRA_LIBS)
-sim_plugindir="\${prefix}/lib/sim"
-sim_stylesdir="\${prefix}/lib/sim/styles"
+sim_plugindir="\${exec_prefix}/lib/sim"
+sim_stylesdir="\${exec_prefix}/lib/sim/styles"
 AC_SUBST(sim_plugindir)
 AC_SUBST(sim_stylesdir)
-AC_DEFINE_UNQUOTED(PLUGIN_PATH,"${prefix}/lib/sim",[Plugins path])
+AC_DEFINE_UNQUOTED(PLUGIN_PATH,"${exec_prefix}/lib/sim",[Plugins path])
 
 LIB_XML2=""
 AC_PATH_PROG(XML2_CONFIG, xml2-config, no)
