commited qt4 port code

--- a/trunk/sim-qt4/admin/acinclude.m4.in
+++ b/trunk/sim-qt4/admin/acinclude.m4.in
@@ -981,6 +981,8 @@ fi
 LIB_XEXT="-lXext"
 QTE_NORTTI=""
 
+CXXFLAGS="$CXXFLAGS -DQT3_SUPPORT"
+
 elif test "$kde_use_qt_emb" = "yes"; then
   dnl We're using QT Embedded
   CPPFLAGS=-DQWS
