--- a/trunk/sim-qt4/sim/sim.desktop
+++ b/trunk/sim-qt4/sim/sim.desktop
@@ -9,6 +9,6 @@ Comment=ICQ-client
 Comment[de]=
 Comment[ru]=
 Terminal=0
-Name=Sim
-Name[de]=Sim
-Name[ru]=Sim
+Name=SIM
+Name[de]=SIM
+Name[ru]=SIM
