Reverts revision 33 patch - qt4 things don't compile well in this branch

--- a/trunk/sim/plugins/about/Makefile.am
+++ b/trunk/sim/plugins/about/Makefile.am
@@ -3,9 +3,7 @@ sim_plugin_LTLIBRARIES = about.la
 about_la_SOURCES = \
  about.cpp \
  aboutdlg.cpp \
- aboutdlgbase.h \
- about.moc \
- aboutdlg.moc
+ aboutdlgbase.ui
 
 INCLUDES=-I../../sim $(all_includes)
 
