--- a/trunk/sim/plugins/__homedir/Makefile.am
+++ b/trunk/sim/plugins/__homedir/Makefile.am
@@ -9,7 +9,7 @@ EXTRA___homedir_la_SOURCES = \
 
 INCLUDES=-I../../sim $(all_includes)
 
-__homedir_la_METASOURCES = AUTO
+__homedir_la_METASOURCES = homedircfg.moc
 __homedir_la_LIBADD = $(__HOMEDIR_OBJ) ../../sim/libsim.la  $(LIBUI) $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
 __homedir_la_DEPENDENCIES = $(__HOMEDIR_OBJ)
 __homedir_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
