--- a/trunk/sim-qt4/admin/acinclude.m4.in
+++ b/trunk/sim-qt4/admin/acinclude.m4.in
@@ -287,6 +287,17 @@ configure.
 ])
 ])
 
+AC_DEFUN([KDE_RCC_ERROR_MESSAGE],
+[
+    AC_MSG_WARN([No Qt resource compiler (rcc) found!
+Please check whether you installed Qt correctly.
+You need to have a running uic binary.
+configure tried to run $ac_cv_path_rcc and the test didn't
+succeed. If configure shouldn't have tried this one, set
+the environment variable RCC to the right one before running
+configure.
+])
+])
 
 AC_DEFUN([KDE_CHECK_UIC_FLAG],
 [
@@ -356,9 +367,6 @@ AC_DEFUN([AC_PATH_QT_MOC_UIC],
            UIC="$UIC -nounload"
        fi
      fi
-     if test -n "$UIC3_PATH"; then
-         UIC="$UIC -3 $UIC3_PATH"
-     fi
    else
      UIC="echo uic not available: "
    fi
@@ -370,6 +378,39 @@ AC_DEFUN([AC_PATH_QT_MOC_UIC],
    UIC_TR="tr2i18n"
 
    AC_SUBST(UIC_TR)
+])
+
+dnl ------------------------------------------------------------------------
+dnl Find the resource compiler in the PATH,
+dnl in $QTDIR/bin, and some more usual places
+dnl ------------------------------------------------------------------------
+dnl
+AC_DEFUN([AC_PATH_QT_RCC],
+[
+   AC_REQUIRE([KDE_CHECK_PERL])
+   qt_bindirs=""
+   for dir in $kde_qt_dirs; do
+      qt_bindirs="$qt_bindirs $dir/bin"
+   done
+   qt_bindirs="$qt_bindirs /usr/bin /usr/X11R6/bin /usr/local/qt/bin"
+   if test ! "$ac_qt_bindir" = "NO"; then
+      qt_bindirs="$ac_qt_bindir $qt_bindirs"
+   fi
+
+   if test -z "$RCC_NOT_NEEDED"; then
+     KDE_FIND_PATH(rcc, RCC_PATH, [$qt_bindirs], [RCC_PATH=""])
+     if test -z "$RCC_PATH" ; then
+       KDE_RCC_ERROR_MESSAGE
+       exit 1
+     else
+       RCC=$RCC_PATH
+     fi
+   else
+     RCC="echo rcc not available: "
+   fi
+
+   AC_SUBST(RCC)
+   AC_SUBST(RCC_PATH)
 ])
 
 AC_DEFUN([KDE_SET_PATHS],
@@ -1267,6 +1308,7 @@ test -z "$KDE_MT_LDFLAGS" || all_libraries="$all_libraries $KDE_MT_LDFLAGS"
 AC_SUBST(QT_INCLUDES)
 AC_SUBST(QT_LDFLAGS)
 AC_PATH_QT_MOC_UIC
+AC_PATH_QT_RCC
 
 KDE_CHECK_QT_JPEG
 
@@ -5247,7 +5289,10 @@ else
   ac_cv_have_ssl="have_ssl=yes \
     ac_ssl_includes=$ac_ssl_includes ac_ssl_libraries=$ac_ssl_libraries ac_ssl_rsaref=$ac_ssl_rsaref"
   
-  
+  if test "$have_ssl" = "yes"; then
+    AC_DEFINE(USE_OPENSSL, 1, [Use OpenSSL])
+  fi
+	 
   ssl_libraries="$ac_ssl_libraries"
   ssl_includes="$ac_ssl_includes"
 
