Fixed library path

--- a/trunk/sim-qt4-fullport/src/Makefile.am
+++ b/trunk/sim-qt4-fullport/src/Makefile.am
@@ -2,13 +2,13 @@ bin_PROGRAMS = sim
 
 sim_SOURCES = sim.cpp sim-resource.cpp
 
-sim_LDADD = libsim.la
+sim_LDADD = ../lib/libsim.la
 
 sim-resource.cpp: $(RCC) sim.qrc
 	$(RCC) -o sim-resource.cpp -name sim $(srcdir)/sim.qrc
 
-INCLUDES=-Iapi $(all_includes) 
+INCLUDES=-I../lib -Iapi $(all_includes) 
 
 METASOURCES = AUTO
 
-sim_LDFLAGS = $(QT_LDFLAGS) $(KDE_RPATH) $(SSL_LDFLAGS) $(all_libraries)
+sim_LDFLAGS = -L../lib $(QT_LDFLAGS) $(KDE_RPATH) $(SSL_LDFLAGS) $(all_libraries)
