Fixed library path

--- a/trunk/sim-qt4-fullport/plugins/__homedir/Makefile.am
+++ b/trunk/sim-qt4-fullport/plugins/__homedir/Makefile.am
@@ -4,10 +4,10 @@ __homedir_la_SOURCES = \
  homedir.cpp \
  homedircfgbase.ui
 
-INCLUDES=-I../../sim $(all_includes)
+INCLUDES=-I../../lib $(all_includes)
 
-__homedir_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
-__homedir_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+__homedir_la_LIBADD = ../../lib/libsim.la  $(LIBUI) $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
+__homedir_la_LDFLAGS = -module -no-undefined -avoid-version -L../../lib/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 install-data-hook:
 	rm -rf $(DESTDIR)$(sim_plugindir)/__homedir.la
