--- a/trunk/sim-qt4-fullport/plugins/autoaway/Makefile.am
+++ b/trunk/sim-qt4-fullport/plugins/autoaway/Makefile.am
@@ -5,11 +5,11 @@ autoaway_la_SOURCES = \
  autoawaycfg.cpp \
  autoaway.cpp
 
-INCLUDES=-I../../sim -I../_core $(all_includes)
+INCLUDES=-I../../lib -I../_core $(all_includes)
 
 autoaway_la_METASOURCES = AUTO
-autoaway_la_LIBADD = ../../sim/libsim.la  $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS) $(XSS_LIBS)
-autoaway_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+autoaway_la_LIBADD = ../../lib/libsim.la  $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS) $(XSS_LIBS)
+autoaway_la_LDFLAGS = -module -no-undefined -avoid-version -L../../lib/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 install-data-hook:
 	rm -rf $(DESTDIR)$(sim_plugindir)/autoaway.la
