--- a/trunk/sim-qt4-fullport/plugins/navigate/Makefile.am
+++ b/trunk/sim-qt4-fullport/plugins/navigate/Makefile.am
@@ -6,11 +6,11 @@ navigate_la_SOURCES = \
  navcfgbase.ui \
  parseurl.ll
 
-INCLUDES=-I../../sim -I../_core $(all_includes)
+INCLUDES=-I../../lib -I../_core $(all_includes)
 
 navigate_la_METASOURCES = AUTO
-navigate_la_LIBADD = ../../sim/libsim.la  $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
-navigate_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+navigate_la_LIBADD = ../../lib/libsim.la  $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
+navigate_la_LDFLAGS = -module -no-undefined -avoid-version -L../../lib/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 install-data-hook:
 	rm -rf $(DESTDIR)$(sim_plugindir)/navigate.la
