--- a/trunk/sim-qt4-fullport/plugins/sound/Makefile.am
+++ b/trunk/sim-qt4-fullport/plugins/sound/Makefile.am
@@ -7,12 +7,12 @@ sound_la_SOURCES = \
  sounduser.cpp \
  sounduserbase.ui
 
-INCLUDES=-I../../sim -I../_core $(all_includes)
+INCLUDES=-I../../lib -I../_core $(all_includes)
 SUBDIRS=sounds
 
 sound_la_METASOURCES = AUTO
-sound_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_KDECORE) $(LIB_QT) $(EXTRA_LIBS)
-sound_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+sound_la_LIBADD = ../../lib/libsim.la  $(LIBUI) $(LIB_KDECORE) $(LIB_QT) $(EXTRA_LIBS)
+sound_la_LDFLAGS = -module -no-undefined -avoid-version -L../../lib/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 install-data-hook:
 	rm -rf $(DESTDIR)$(sim_plugindir)/sound.la
