--- a/trunk/sim-qt4-fullport/plugins/spell/Makefile.am
+++ b/trunk/sim-qt4-fullport/plugins/spell/Makefile.am
@@ -7,11 +7,11 @@ spell_la_SOURCES = \
   speller.cpp \
   spellhighlight.cpp
 
-INCLUDES=-I../../sim -I../_core $(all_includes)
+INCLUDES=-I../../lib -I../_core $(all_includes)
 
 spell_la_METASOURCES = AUTO
-spell_la_LIBADD = ../../sim/libsim.la   $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS) $(LIB_ASPELL)
-spell_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+spell_la_LIBADD = ../../lib/libsim.la   $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS) $(LIB_ASPELL)
+spell_la_LDFLAGS = -module -no-undefined -avoid-version -L../../lib/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 install-data-hook:
 	rm -rf $(DESTDIR)$(sim_plugindir)/spell.la
