--- a/trunk/sim-qt4-fullport/plugins/__migrate/Makefile.am
+++ b/trunk/sim-qt4-fullport/plugins/__migrate/Makefile.am
@@ -5,11 +5,11 @@ __migrate_la_SOURCES = \
  migratedlg.cpp \
  migratedlgbase.ui 
 
-INCLUDES=-I../../sim -I../_core $(all_includes)
+INCLUDES=-I../../lib -I../_core $(all_includes)
 
 __migrate_la_METASOURCES = AUTO
-__migrate_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
-__migrate_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+__migrate_la_LIBADD = ../../lib/libsim.la  $(LIBUI) $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
+__migrate_la_LDFLAGS = -module -no-undefined -avoid-version -L../../lib/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 install-data-hook:
 	rm -rf $(DESTDIR)$(sim_plugindir)/__migrate.la
