--- a/trunk/sim-qt4-fullport/plugins/about/Makefile.am
+++ b/trunk/sim-qt4-fullport/plugins/about/Makefile.am
@@ -5,11 +5,11 @@ about_la_SOURCES = \
  aboutdlg.cpp \
  aboutdlgbase.ui
 
-INCLUDES=-I../../sim $(all_includes)
+INCLUDES=-I../../lib $(all_includes)
 
 about_la_METASOURCES = AUTO
-about_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_QT) $(LIB_KDECORE) $(LIB_KDEUI) $(EXTRA_LIBS)
-about_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+about_la_LIBADD = ../../lib/libsim.la  $(LIBUI) $(LIB_QT) $(LIB_KDECORE) $(LIB_KDEUI) $(EXTRA_LIBS)
+about_la_LDFLAGS = -module -no-undefined -avoid-version -L../../lib/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 install-data-hook:
 	rm -rf $(DESTDIR)$(sim_plugindir)/about.la
