--- a/trunk/sim-qt4-fullport/plugins/background/Makefile.am
+++ b/trunk/sim-qt4-fullport/plugins/background/Makefile.am
@@ -5,11 +5,11 @@ background_la_SOURCES = \
  bkgndcfgbase.ui \
  bkgndcfg.cpp
 
-INCLUDES=-I../../sim $(all_includes)
+INCLUDES=-I../../lib $(all_includes)
 
 background_la_METASOURCES = AUTO
-background_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
-background_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+background_la_LIBADD = ../../lib/libsim.la  $(LIBUI) $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
+background_la_LDFLAGS = -module -no-undefined -avoid-version -L../../lib/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 install-data-hook:
 	rm -rf $(DESTDIR)$(sim_plugindir)/background.la
