--- a/trunk/sim-qt4-fullport/plugins/forward/Makefile.am
+++ b/trunk/sim-qt4-fullport/plugins/forward/Makefile.am
@@ -5,11 +5,11 @@ forward_la_SOURCES = \
  forwardcfg.cpp \
  forwardcfgbase.ui 
 
-INCLUDES=-I../../sim -I../_core $(all_includes)
+INCLUDES=-I../../lib -I../_core $(all_includes)
 
 forward_la_METASOURCES = AUTO
-forward_la_LIBADD = ../../sim/libsim.la  $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
-forward_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+forward_la_LIBADD = ../../lib/libsim.la  $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
+forward_la_LDFLAGS = -module -no-undefined -avoid-version -L../../lib/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 install-data-hook:
 	rm -rf $(DESTDIR)$(sim_plugindir)/forward.la
