--- a/trunk/sim-qt4-fullport/plugins/livejournal/Makefile.am
+++ b/trunk/sim-qt4-fullport/plugins/livejournal/Makefile.am
@@ -9,11 +9,11 @@ livejournal_la_SOURCES = \
  journalsearch.cpp \
  journalsearchbase.ui 
 
-INCLUDES=-I../../sim -I../_core $(all_includes)
+INCLUDES=-I../../lib -I../_core $(all_includes)
 
 livejournal_la_METASOURCES = AUTO
-livejournal_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_KDECORE) $(LIB_KDEUI) $(LIB_KFILE) $(LIB_QT) $(LIBSSL) $(EXTRA_LIBS)
-livejournal_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+livejournal_la_LIBADD = ../../lib/libsim.la  $(LIBUI) $(LIB_KDECORE) $(LIB_KDEUI) $(LIB_KFILE) $(LIB_QT) $(LIBSSL) $(EXTRA_LIBS)
+livejournal_la_LDFLAGS = -module -no-undefined -avoid-version -L../../lib/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 install-data-hook:
 	rm -rf $(DESTDIR)$(sim_plugindir)/livejournal.la
