--- a/trunk/sim-qt4-fullport/plugins/logger/Makefile.am
+++ b/trunk/sim-qt4-fullport/plugins/logger/Makefile.am
@@ -5,11 +5,11 @@ logger_la_SOURCES = \
  logconfig.cpp \
  logconfigbase.ui
 
-INCLUDES=-I../../sim $(all_includes)
+INCLUDES=-I../../lib $(all_includes)
 
 logger_la_METASOURCES = AUTO
-logger_la_LIBADD = ../../sim/libsim.la   $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
-logger_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+logger_la_LIBADD = ../../lib/libsim.la   $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
+logger_la_LDFLAGS = -module -no-undefined -avoid-version -L../../lib/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 install-data-hook:
 	rm -rf $(DESTDIR)$(sim_plugindir)/logger.la
