--- a/trunk/sim-qt4-fullport/plugins/ontop/Makefile.am
+++ b/trunk/sim-qt4-fullport/plugins/ontop/Makefile.am
@@ -5,11 +5,11 @@ ontop_la_SOURCES = \
  ontopcfg.cpp \
  ontopcfgbase.ui
 
-INCLUDES=-I../../sim $(all_includes)
+INCLUDES=-I../../lib $(all_includes)
 
 ontop_la_METASOURCES = AUTO
-ontop_la_LIBADD = ../../sim/libsim.la  $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
-ontop_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+ontop_la_LIBADD = ../../lib/libsim.la  $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
+ontop_la_LDFLAGS = -module -no-undefined -avoid-version -L../../lib/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 install-data-hook:
 	rm -rf $(DESTDIR)$(sim_plugindir)/ontop.la
