--- a/trunk/sim-qt4-fullport/plugins/splash/Makefile.am
+++ b/trunk/sim-qt4-fullport/plugins/splash/Makefile.am
@@ -3,11 +3,11 @@ sim_plugin_LTLIBRARIES = splash.la
 splash_la_SOURCES = \
  splash.cpp 
 
-INCLUDES=-I../../sim $(all_includes)
+INCLUDES=-I../../lib $(all_includes)
 
 splash_la_METASOURCES = AUTO
-splash_la_LIBADD = ../../sim/libsim.la  $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
-splash_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+splash_la_LIBADD = ../../lib/libsim.la  $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
+splash_la_LDFLAGS = -module -no-undefined -avoid-version -L../../lib/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 EXTRA_DIST = splash.png
 
