--- a/trunk/sim-qt4-fullport/plugins/styles/Makefile.am
+++ b/trunk/sim-qt4-fullport/plugins/styles/Makefile.am
@@ -7,11 +7,11 @@ styles_la_SOURCES = \
  fontconfig.cpp \
  styles.cpp
 
-INCLUDES=-I../../sim $(all_includes)
+INCLUDES=-I../../lib $(all_includes)
 
 styles_la_METASOURCES = AUTO
-styles_la_LIBADD = ../../sim/libsim.la   $(LIB_QT) $(LIB_KDECORE) $(LIB_KDEUI) $(EXTRA_LIBS) 
-styles_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+styles_la_LIBADD = ../../lib/libsim.la   $(LIB_QT) $(LIB_KDECORE) $(LIB_KDEUI) $(EXTRA_LIBS) 
+styles_la_LDFLAGS = -module -no-undefined -avoid-version -L../../lib/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 install-data-hook:
 	rm -rf $(DESTDIR)$(sim_plugindir)/styles.la
