--- a/trunk/sim-qt4-fullport/plugins/transparent/Makefile.am
+++ b/trunk/sim-qt4-fullport/plugins/transparent/Makefile.am
@@ -6,11 +6,11 @@ transparent_la_SOURCES = \
  transparentcfgbase.ui \
  transtop.cpp
 
-INCLUDES=-I../../sim $(all_includes)
+INCLUDES=-I../../lib $(all_includes)
 
 transparent_la_METASOURCES = AUTO
-transparent_la_LIBADD = ../../sim/libsim.la  $(LIB_QT) $(LIB_KDECORE) $(LIB_KDEUI) $(LIB_KDEFX) $(EXTRA_LIBS)
-transparent_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
+transparent_la_LIBADD = ../../lib/libsim.la  $(LIB_QT) $(LIB_KDECORE) $(LIB_KDEUI) $(LIB_KDEFX) $(EXTRA_LIBS)
+transparent_la_LDFLAGS = -module -no-undefined -avoid-version -L../../lib/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 install-data-hook:
 	rm -rf $(DESTDIR)$(sim_plugindir)/transparent.la
