new UIN registration scheme

--- a/trunk/sim/plugins/icq/Makefile.am
+++ b/trunk/sim/plugins/icq/Makefile.am
@@ -54,6 +54,8 @@ icq_la_SOURCES = \
  encodingdlgbase.ui \
  rtfgen.cpp \
  rtf.ll \
+ verifydlg.cpp \
+ verifydlgbase.ui \
  xml.cpp
 
 SUBDIRS = sounds
