make dist fixes, part 1 (damir@altlinux)

--- a/branches/0.9.4/plugins/_core/styles/Makefile.am
+++ b/branches/0.9.4/plugins/_core/styles/Makefile.am
@@ -2,7 +2,7 @@ EXTRA_DIST = \
  SIM.xsl \
  SIM.2.xsl \
  SIM.3.xsl \
- "SIM.4.(2+3).xsl" \
+ SIM.4.(2+3).xsl \
  XChat.xsl \
  XChat2seconds.xsl \
  XChat3fullDate.xsl \
@@ -10,10 +10,10 @@ EXTRA_DIST = \
  Separated.2.xsl \
  Separated.3.xsl \
  Separated.4.xsl \
- "Separated.5.(2+3).xsl" \
- "Separated.6.(2+4).xsl" \
- "Separated.7.(3+4).xsl" \
- "Separated.8.(2+3+4).xsl"
+ Separated.5.(2+3).xsl \
+ Separated.6.(2+4).xsl \
+ Separated.7.(3+4).xsl \
+ Separated.8.(2+3+4).xsl
 
 install-data-local:
 	$(mkinstalldirs) $(kde_datadir)/sim/styles
