--- a/branches/0.9.4/plugins/sms/Makefile.am
+++ b/branches/0.9.4/plugins/sms/Makefile.am
@@ -8,6 +8,7 @@ sms_la_SOURCES = \
  serial.cpp 
 
 SUBDIRS=sounds
+EXTRA_DIST = xpm/simcard.xpm
 
 INCLUDES=-I../../sim -I../_core $(all_includes)
 
