Changes for building sim in separate tree. It also disables redundant installation of COPYING file. (ok wrar@)
Based on the following patch
http://sourceforge.net/tracker/index.php?func=detail&aid=942256&group_id=56866&atid=482104
submitted by langly at users.sourceforge.net

--- a/trunk/sim/plugins/__homedir/Makefile.am
+++ b/trunk/sim/plugins/__homedir/Makefile.am
@@ -7,7 +7,7 @@ __homedir_la_SOURCES = \
 EXTRA___homedir_la_SOURCES = \
  homedircfg.cpp
 
-INCLUDES=-I../../sim $(all_includes)
+INCLUDES=-I$(srcdir)/../../sim $(all_includes)
 
 __homedir_la_METASOURCES = homedircfg.moc
 __homedir_la_LIBADD = $(__HOMEDIR_OBJ) ../../sim/libsim.la  $(LIBUI) $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
