--- a/trunk/sim/plugins/_core/icqlite/Makefile.am
+++ b/trunk/sim/plugins/_core/icqlite/Makefile.am
@@ -1,7 +1,7 @@
 all: icqlite.jisp
 
-icqlite.jisp: icondef.xml *.png
-	$(ZIP) $(ZIP_FLAGS) icqlite.jisp icondef.xml *.png
+icqlite.jisp: $(srcdir)/icondef.xml $(srcdir)/*.png
+	$(ZIP) $(ZIP_FLAGS) $@ $^
 
 install-data-local:
 	$(mkinstalldirs) $(kde_datadir)/sim/icons
