--- a/trunk/sim/plugins/background/Makefile.am
+++ b/trunk/sim/plugins/background/Makefile.am
@@ -5,7 +5,7 @@ background_la_SOURCES = \
  bkgndcfgbase.ui \
  bkgndcfg.cpp
 
-INCLUDES=-I../../sim $(all_includes)
+INCLUDES=-I$(srcdir)/../../sim $(all_includes)
 
 background_la_METASOURCES = AUTO
 background_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
