--- a/trunk/sim/plugins/icq/sounds/Makefile.am
+++ b/trunk/sim/plugins/icq/sounds/Makefile.am
@@ -1,8 +1,5 @@
-EXTRA_DIST = \
+dist_sounds_DATA = \
  mailpager.wav \
  web.wav
 
-install-data-local:
-	$(mkinstalldirs) $(kde_datadir)/sim/sounds/
-	$(INSTALL_DATA) $(EXTRA_DIST) $(kde_datadir)/sim/sounds/
-
+soundsdir = $(kde_datadir)/sim/sounds/
