--- a/trunk/sim/plugins/sms/Makefile.am
+++ b/trunk/sim/plugins/sms/Makefile.am
@@ -9,7 +9,7 @@ sms_la_SOURCES = \
 
 SUBDIRS=sounds
 
-INCLUDES=-I../../sim -I../_core $(all_includes)
+INCLUDES=-I$(srcdir)/../../sim -I../_core -I$(srcdir)/../_core $(all_includes)
 
 sms_la_METASOURCES = AUTO
 sms_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_KDECORE) $(LIB_KDEUI) $(LIB_KFILE) $(LIB_QT) $(EXTRA_LIBS)
