--- a/trunk/sim/plugins/sound/sounds/Makefile.am
+++ b/trunk/sim/plugins/sound/sounds/Makefile.am
@@ -1,4 +1,4 @@
-EXTRA_DIST = \
+dist_sounds_DATA = \
  alert.wav \
  auth.wav \
  filedone.wav \
@@ -13,9 +13,4 @@ EXTRA_DIST = \
  message2.wav \
  vip-online.wav
 
-
-
-install-data-local:
-	$(mkinstalldirs) $(kde_datadir)/sim/sounds/
-	$(INSTALL_DATA) $(EXTRA_DIST) $(kde_datadir)/sim/sounds/
-
+soundsdir = $(kde_datadir)/sim/sounds/
