--- a/trunk/sim/plugins/_core/styles/Makefile.am
+++ b/trunk/sim/plugins/_core/styles/Makefile.am
@@ -1,8 +1,8 @@
-EXTRA_DIST = \
+dist_styles_DATA = \
  SIM.xsl \
  SIM.2.xsl \
  SIM.3.xsl \
- "SIM.4.(2+3).xsl" \
+ SIM.4.(2+3).xsl \
  XChat.xsl \
  XChat2seconds.xsl \
  XChat3fullDate.xsl \
@@ -10,12 +10,9 @@ EXTRA_DIST = \
  Separated.2.xsl \
  Separated.3.xsl \
  Separated.4.xsl \
- "Separated.5.(2+3).xsl" \
- "Separated.6.(2+4).xsl" \
- "Separated.7.(3+4).xsl" \
- "Separated.8.(2+3+4).xsl"
+ Separated.5.(2+3).xsl \
+ Separated.6.(2+4).xsl \
+ Separated.7.(3+4).xsl \
+ Separated.8.(2+3+4).xsl
 
-install-data-local:
-	$(mkinstalldirs) $(kde_datadir)/sim/styles
-	$(INSTALL_DATA) $(EXTRA_DIST) $(kde_datadir)/sim/styles
-
+stylesdir = $(kde_datadir)/sim/styles/
