--- a/trunk/sim/plugins/action/Makefile.am
+++ b/trunk/sim/plugins/action/Makefile.am
@@ -9,7 +9,7 @@ action_la_SOURCES = \
  additem.cpp \
  additembase.ui
 
-INCLUDES=-I../../sim -I../_core $(all_includes)
+INCLUDES=-I$(srcdir)/../../sim -I../_core -I$(srcdir)/../_core $(all_includes)
 
 action_la_METASOURCES = AUTO
 action_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_KDECORE) $(LIB_KDEUI) $(LIB_KFILE) $(LIB_QT) $(EXTRA_LIBS)
