--- a/trunk/sim/plugins/autoaway/Makefile.am
+++ b/trunk/sim/plugins/autoaway/Makefile.am
@@ -5,7 +5,7 @@ autoaway_la_SOURCES = \
  autoawaycfg.cpp \
  autoaway.cpp
 
-INCLUDES=-I../../sim -I../_core $(all_includes)
+INCLUDES=-I$(srcdir)/../../sim -I../_core -I$(srcdir)/../_core $(all_includes)
 
 autoaway_la_METASOURCES = AUTO
 autoaway_la_LIBADD = ../../sim/libsim.la  $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS) $(XSS_LIBS)
