--- a/trunk/sim/plugins/forward/Makefile.am
+++ b/trunk/sim/plugins/forward/Makefile.am
@@ -5,7 +5,7 @@ forward_la_SOURCES = \
  forwardcfg.cpp \
  forwardcfgbase.ui 
 
-INCLUDES=-I../../sim -I../_core $(all_includes)
+INCLUDES=-I$(srcdir)/../../sim -I../_core -I$(srcdir)/../_core $(all_includes)
 
 forward_la_METASOURCES = AUTO
 forward_la_LIBADD = ../../sim/libsim.la  $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
