--- a/trunk/sim/plugins/icq/Makefile.am
+++ b/trunk/sim/plugins/icq/Makefile.am
@@ -60,7 +60,7 @@ icq_la_SOURCES = \
 
 SUBDIRS = sounds
 
-INCLUDES=-I../../sim -I../_core $(all_includes)
+INCLUDES=-I$(srcdir)/../../sim -I../_core -I$(srcdir)/../_core $(all_includes)
 
 icq_la_METASOURCES = AUTO
 icq_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_QT) $(LIB_KDECORE) $(LIBSSL) $(EXTRA_LIBS)
