--- a/trunk/sim/plugins/livejournal/Makefile.am
+++ b/trunk/sim/plugins/livejournal/Makefile.am
@@ -9,7 +9,7 @@ livejournal_la_SOURCES = \
  journalsearch.cpp \
  journalsearchbase.ui 
 
-INCLUDES=-I../../sim -I../_core $(all_includes)
+INCLUDES=-I$(srcdir)/../../sim -I../_core -I$(srcdir)/../_core $(all_includes)
 
 livejournal_la_METASOURCES = AUTO
 livejournal_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_KDECORE) $(LIB_KDEUI) $(LIB_KFILE) $(LIB_QT) $(LIBSSL) $(EXTRA_LIBS)
