--- a/trunk/sim/plugins/logger/Makefile.am
+++ b/trunk/sim/plugins/logger/Makefile.am
@@ -5,7 +5,7 @@ logger_la_SOURCES = \
  logconfig.cpp \
  logconfigbase.ui
 
-INCLUDES=-I../../sim $(all_includes)
+INCLUDES=-I$(srcdir)/../../sim $(all_includes)
 
 logger_la_METASOURCES = AUTO
 logger_la_LIBADD = ../../sim/libsim.la   $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
