--- a/trunk/sim/plugins/osd/Makefile.am
+++ b/trunk/sim/plugins/osd/Makefile.am
@@ -7,7 +7,7 @@ osd_la_SOURCES = \
  osdiface.cpp \
  osdifacebase.ui
 
-INCLUDES=-I../../sim -I../_core $(all_includes)
+INCLUDES=-I$(srcdir)/../../sim -I../_core -I$(srcdir)/../_core $(all_includes)
 
 osd_la_METASOURCES = AUTO
 osd_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_QT) $(LIB_KDECORE) $(LIB_KDEUI) $(EXTRA_LIBS)
