--- a/trunk/sim/plugins/proxy/Makefile.am
+++ b/trunk/sim/plugins/proxy/Makefile.am
@@ -7,7 +7,7 @@ proxy_la_SOURCES = \
  proxyerror.cpp \
  proxyerrorbase.ui
 
-INCLUDES=-I../../sim -I../_core $(all_includes)
+INCLUDES=-I$(srcdir)/../../sim -I../_core -I$(srcdir)/../_core $(all_includes)
 
 proxy_la_METASOURCES = AUTO
 proxy_la_LIBADD = ../../sim/libsim.la  $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
