--- a/trunk/sim/plugins/yahoo/Makefile.am
+++ b/trunk/sim/plugins/yahoo/Makefile.am
@@ -16,7 +16,7 @@ yahoo_la_SOURCES = \
  md5.c \
  sha.c
 
-INCLUDES=-I../../sim -I../_core $(all_includes)
+INCLUDES=-I$(srcdir)/../../sim -I../_core -I$(srcdir)/../_core $(all_includes)
 
 yahoo_la_METASOURCES = AUTO
 yahoo_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_KDECORE) $(LIB_KDEUI) $(LIB_KFILE) $(LIB_QT) $(EXTRA_LIBS)
