--- a/trunk/sim/plugins/sms/Makefile.am
+++ b/trunk/sim/plugins/sms/Makefile.am
@@ -8,6 +8,7 @@ sms_la_SOURCES = \
  serial.cpp 
 
 SUBDIRS=sounds
+EXTRA_DIST = xpm/simcard.xpm
 
 INCLUDES=-I$(srcdir)/../../sim -I../_core -I$(srcdir)/../_core $(all_includes)
 
