--- a/trunk/sim/plugins/zodiak/Makefile.am
+++ b/trunk/sim/plugins/zodiak/Makefile.am
@@ -3,6 +3,8 @@ sim_plugin_LTLIBRARIES = zodiak.la
 zodiak_la_SOURCES = \
  zodiak.cpp 
 
+EXTRA_DIST = xpm/*.xpm
+
 INCLUDES=-I$(srcdir)/../../sim -I../_core -I$(srcdir)/../_core $(all_includes)
 
 zodiak_la_METASOURCES = AUTO
