add styles from trunk

--- a/branches/0.9.4/plugins/_core/styles/Makefile.am
+++ b/branches/0.9.4/plugins/_core/styles/Makefile.am
@@ -3,6 +3,8 @@ EXTRA_DIST = \
  SIM.2.xsl \
  SIM.3.xsl \
  SIM.4.(2+3).xsl \
+ SIM.5.xsl \
+ SIM.5.2.xsl \
  XChat.xsl \
  XChat2seconds.xsl \
  XChat3fullDate.xsl \
