Add correct installation and deinstallation of jisp files.

--- a/trunk/sim/plugins/_core/icqlite/Makefile.am
+++ b/trunk/sim/plugins/_core/icqlite/Makefile.am
@@ -1,8 +1,8 @@
+nodist_icons_DATA = icqlite.jisp
+
+iconsdir=$(kde_datadir)/sim/icons/
+
 all: icqlite.jisp
 
 icqlite.jisp: $(srcdir)/icondef.xml $(srcdir)/*.png
 	$(ZIP) $(ZIP_FLAGS) $@ $^
-
-install-data-local:
-	$(mkinstalldirs) $(kde_datadir)/sim/icons
-	$(INSTALL_DATA) icqlite.jisp $(kde_datadir)/sim/icons
