--- a/trunk/sim/plugins/_core/smiles/Makefile.am
+++ b/trunk/sim/plugins/_core/smiles/Makefile.am
@@ -1,8 +1,8 @@
+nodist_icons_DATA = smiles.jisp
+
+iconsdir = $(kde_datadir)/sim/icons/
 all: smiles.jisp
 
 smiles.jisp: $(srcdir)/icondef.xml $(srcdir)/*.png
 	$(ZIP) $(ZIP_FLAGS) $@ $^
 
-install-data-local:
-	$(mkinstalldirs) $(kde_datadir)/sim/icons
-	$(INSTALL_DATA) smiles.jisp $(kde_datadir)/sim/icons
