--- a/trunk/sim/plugins/weather/jisp/Makefile.am
+++ b/trunk/sim/plugins/weather/jisp/Makefile.am
@@ -1,8 +1,8 @@
+nodist_icons_DATA = weather.jisp
+
+iconsdir = $(kde_datadir)/sim/icons/
+
 all: weather.jisp
 
 weather.jisp: $(srcdir)/icondef.xml $(srcdir)/*.png
 	$(ZIP) $(ZIP_FLAGS) $@ $^
-
-install-data-local:
-	$(mkinstalldirs) $(kde_datadir)/sim/icons
-	$(INSTALL_DATA) weather.jisp $(kde_datadir)/sim/icons
