--- a/trunk/sim/plugins/zodiak/Makefile.am
+++ b/trunk/sim/plugins/zodiak/Makefile.am
@@ -3,7 +3,6 @@ sim_plugin_LTLIBRARIES = zodiak.la
 zodiak_la_SOURCES = \
  zodiak.cpp 
 
-EXTRA_DIST = xpm/*.xpm
 
 INCLUDES=-I$(srcdir)/../../sim -I../_core -I$(srcdir)/../_core $(all_includes)
 
@@ -14,4 +13,6 @@ zodiak_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_
 install-data-hook:
 	rm -rf $(DESTDIR)$(sim_plugindir)/zodiak.la
 
-
+dist-hook:
+	mkdir $(distdir)/xpm
+	cp $(srcdir)/xpm/*.xpm $(distdir)/xpm
