--- a/trunk/sim/sim/sim.desktop
+++ b/trunk/sim/sim/sim.desktop
@@ -1,14 +1,10 @@
-# KDE Config File  
 [Desktop Entry]
 Type=Application
+Version=1.0
+Encoding=UTF-8
+Name=Sim-IM
 Exec=sim
 Icon=sim.png
-MiniIcon=sim.png
-DocPath=sim/index.html
-Comment=ICQ-client
-Comment[de]=
-Comment[ru]=
-Terminal=0
-Name=Sim
-Name[de]=Sim
-Name[ru]=Sim
+GenericName=SIM Instant Messenger
+Terminal=false
+Categories=Qt;KDE;Network;InstantMessaging;
