--- a/trunk/sim/plugins/forward/forward.vcproj
+++ b/trunk/sim/plugins/forward/forward.vcproj
@@ -23,6 +23,7 @@
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="false"
 			CharacterSet="2"
+			BuildLogFile="$(IntDir)\$(ParentName)_BuildLog.htm"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -121,6 +122,7 @@
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="false"
 			CharacterSet="2"
+			BuildLogFile="$(IntDir)\$(ParentName)_BuildLog.htm"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
