--- a/trunk/sim/plugins/remote/simremote.vcproj
+++ b/trunk/sim/plugins/remote/simremote.vcproj
@@ -25,6 +25,7 @@
 			UseOfATL="0"
 			ATLMinimizesCRunTimeLibraryUsage="true"
 			CharacterSet="2"
+			BuildLogFile="$(IntDir)\$(ParentName)_BuildLog.htm"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -122,6 +123,7 @@
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="false"
 			CharacterSet="2"
+			BuildLogFile="$(IntDir)\$(ParentName)_BuildLog.htm"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
